sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var echange = true
  while (echange){
    echange = false
    for (k <- 0 to getNombreValeur() -2 ){
      if (getValeur(k) > getValeur(k+1)){
        echange(k, k+1);
        echanges = true;
      }
    }
  }
}